Fix clipped inputs in RTF Scan and related UI issues
* Remove `overflow: visible` in RTF Scan to prevent richlistbox from expanding the width and causing clipping
* Introduce small margins as an alternative to prevent focus rings from being clipped in the `wizard`
* Fix "Display as" alignment on Windows

--- a/scss/components/_rtfScan.scss
+++ b/scss/components/_rtfScan.scss
@@ -5,7 +5,6 @@
 	wizardpage {
 		display: flex;
 		flex-direction: column;
-		overflow: visible; // prevents focus ring from being clipped
 		
 		> div {
 			display: block;
@@ -18,6 +17,7 @@
 	
 	.file-inputs {
 		margin-top: 1em;
+		margin-right: 2px; // prevents focus ring from being clipped
 		display: grid;
 		grid-template-columns: [label] fit-content(20%) [input] auto [button] fit-content(33%);
 		gap: 10px 5px;
@@ -140,6 +140,12 @@
 			box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.20);
 			padding-left: 7px;
 			padding-right: 7px;
+		}
+	}
+
+	@media (-moz-platform: windows) {
+		style-configurator {
+			margin-bottom: 4px; // prevents focus ring around footnotes/endnotes from being clipped
 		}
 	}
 }
